style.css
/* You can add custom CSS and extend Boostrap styles in this file. Remember, Bootstrap is just CSS at the end of the day! */
body{
  margin: 0px;
  padding: 0px;
  background-color:#2D2E2E ;
}


/*
blue-ish green
#869D96
*/

.w-background{
  background-color: #212529;    
}

.bi-house-door{
  color: white;
}

.red{
  color: hsl(359, 85%, 53%);
}

h1{
    font-family: 'Josefin Sans', sans-serif;
  }

h2{
  font-family: 'Josefin Sans', sans-serif;
}

h3{
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
}

P{
  font-family: 'Poppins', sans-serif;
}

a {
   color:white;
   text-decoration: none;
   display: inline-block;
}

#hero-section{
  background-image: 
    linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.7)),
    url(pictures/main_background_new.jpg);
  background-size: cover;
  background-position: center;
  width: 100%;
  padding: 20%;
  color: white;
  text-align: center;
}

#project_description {
   display: block;
   width: 100%;
   text-align: center;
   color:#2D2E2E;
   background-color: #869D96;
   min-height: 500px;
}

.navbar i{
  padding-left: 15px;
}

.head-border{
  border-width: 2%;
  border-style: solid;
  color: white;
}

.face{
  width:10vw;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.center{
  margin-left: auto;
  margin-right: auto;
  object-fit: contain;
}

.card{
  text-align: center;
  margin: auto;
  background: transparent;
  border: none;
}

.card-body{
  background: transparent;
  color: white;
  margin: 10px;
}


/* mission  */
#mission-section{
  display: block;
  width: 100%;
  background-color: #869D96;
  padding: 50px;
  padding-left: 100px;
  padding-right: 100px;
  min-height: 520px;
  text-align: center;
}

#mission-section p{
  text-align: center;
  padding: 20;
  font-size: 20px;
  margin: auto;
  color: #FBFBFB;
}

#mission-section h2{
  padding: 20px;
  font-family: 'Josefin Sans', sans-serif;
  color: #FBFBFB;

}

/*meet the sponsor carousel*/
/* mission  */
#meetSponsor{
  display: block;
  width: 100%;
  background-color: #869D96;
  padding: 50px;
  padding-left: 100px;
  padding-right: 100px;
  min-height: 520px;
  text-align: center;
}

#meetSponsor p{
  text-align: center;
  padding: 20;
  font-size: 20px;
  margin: auto;
  color: #FBFBFB;
}

#meetSponsor h2{
  padding: 20px;
  font-family: 'Josefin Sans', sans-serif;
  color: #FBFBFB;

}

/*  team  */
#team-section{
  display: block;
  width: 100%;
  text-align: center;
  margin: 40px 0;
  color: #869D96;
  background-color: #2D2E2E;
  min-height: 500px;
  padding-bottom: 50px;
}

.team-description{
  font-size: 20px;
  text-decoration: underline;
}

.team-roles{
  font-size: 15px;
}

.emails{
  font-size: 12px;
}

#team-section h2{
  padding: 60px 0px 20px 0px;
  font-family: 'Josefin Sans', sans-serif;

}

.headShots{
  padding: 50px;
  width: 300px;
  height: 300px;
  border-radius: 50%;
}


/*sponsor*/
.sponsor{
  background-color: #2D2E2E;
  color: beige;
  margin: 0px;
  padding: 0px;
}

#video {
  display: block;
  width: 100%;
  text-align: center;
  color: black;
  background-color: black ;
  min-height: 500px;
}

#video_spacer {
   padding-top: 50px;
}

/* Documents */
#documents-section {
  display: block;
  width: 100%;
  text-align: center;
  color: #2D2E2E;
  padding-left: 100px;
  padding-right: 100px;
  background-color: #869D96 ;
  min-height: 520px;
}

#documents-section i{
  font-size: 20px;
}

#documents-section h2{
  padding: 20px;
}

.icon{
  margin-top: 50px;
}

#documents-section a{
  text-decoration: none;
  color: #2D2E2E;
}

#documents-section p{
  text-decoration: none;
  color: #2D2E2E;
}

#documents-section i:hover{
  color: black;
  font-size: 70px;
}

.row i{
  font-size: 60px;  
}

#documents-section i{
  font-size: 50px;
}

#documents-section h2{
  padding: 60px 0px 20px 0px;
  font-family: 'Josefin Sans', sans-serif;

}

/*footer*/
#footer-section{
  color: white;
}

#footer-nav {
   background-color: black;
   display: flex;
}

#footer-logo {
   padding: 2%;
}

#footer-logo img {
   width: 50px;
   height: 50px;
}

#footer-base {
   background-color: #2D2E2E;
   min-height: 80px;
   display: flex;
   align-items: center;
   margin: 0;
   justify-content: center;
}

#footer-base span {
   padding-left: 3%;
   padding-right: 3%;
   font-size: 13px;
}

#footer-base a {
   padding:20px;
}

.footer-container {
   padding-left: 50px;
   align-items: center;
   display: flex;
}

.footer-column {
   padding: 15%;
   flex: 1;
   white-space: nowrap;
}

.footer-column ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
}

.footer-column h3 {
   padding-bottom: 20px;
}


.button {
  display: inline-block;
  padding: 8px 30px;
  font-size: 18px;
  color: white;
  text-decoration: none;
  background: #2D2E2E;
  border: 2px solid white;
  border-radius: 5px;
  transition: transform 0.2s;
}

.button:hover {
  transform: scale(1.05);
  background: hsl(359, 85%, 53%);
}

@media (max-width: 600px) {
   .footer-container {
      align-items: center;
      display: inline-block;
   }
   .footer-column {
      white-space: normal;
   }
   #video_spacer {
      position: relative;
      padding-bottom: 56.25%;
      overflow: hidden;
   }
   
   #video_spacer iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
   }
 }

